@@ -1,3 +1,9 @@
+2008-09-15  Arek Korbik  <arkadini@gmail.com>
+
+	* flumotion/common/config.py (parsePlug):
+	* flumotion/manager/config.py (parseBool):
+	Add some (old) deprecation warnings.
+
 2008-09-16  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/monitor/nagios/stream.py:
